--- a/SmartDialer/SmartDialer/Base.lproj/Main.storyboard
+++ b/SmartDialer/SmartDialer/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="PDa-qI-nFU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="PDa-qI-nFU">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="black" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="i3v-qL-QLS" userLabel="Contacts Table View">
-                                <rect key="frame" x="0.0" y="64" width="375" height="593"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="563"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="vdA-8p-QXc"/>
@@ -76,7 +76,7 @@
                         <constraints>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="r6E-VC-0EK" secondAttribute="bottom" id="0gA-xU-aWF"/>
                             <constraint firstItem="i3v-qL-QLS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="cGZ-Uf-tfi"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="i3v-qL-QLS" secondAttribute="bottom" constant="10" id="n80-FS-I9X"/>
+                            <constraint firstItem="r6E-VC-0EK" firstAttribute="top" secondItem="i3v-qL-QLS" secondAttribute="bottom" id="ia8-75-AB4"/>
                             <constraint firstAttribute="trailing" secondItem="r6E-VC-0EK" secondAttribute="trailing" id="tlv-DX-3DL"/>
                             <constraint firstItem="r6E-VC-0EK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ufi-8z-qqb"/>
                             <constraint firstItem="i3v-qL-QLS" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="wLk-ij-bbi"/>
